examples/invalid/semanticErr/while/whileIntCondition.wacc
# while condition type mismatch
# Output:
# #semantic error#

#Program:#

begin
  while 15 + 6 do
    skip
  done
end
